src/objects/FieloELR__Course__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>FieloCMS__Category__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMSELR_ContentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Category</label>
        <referenceTo>FieloCMS__Category__c</referenceTo>
        <relationshipLabel>Courses (Content Category)</relationshipLabel>
        <relationshipName>ContentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloELR__ActiveModules__c</fullName>
        <label>Active Modules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloELR__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloELR__HasDependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloELR__KeyDependencies__c</fullName>
        <label>Key Dependencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloELR__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloELR__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloELR__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloELR__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloELR__SubscriptionMode__c</fullName>
        <label>Subscription Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>FieloELR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>